--- a/DEWS/ficheros/practicaSanciones/sanciona.css
+++ b/DEWS/ficheros/practicaSanciones/sanciona.css
@@ -1,16 +1,22 @@
-#menu{
-    position: relative;
-    justify-items: center;
-    top: 200px;
-    margin-left: 40%;
+#menu {
+  position: relative;
+  justify-items: center;
+  top: 200px;
+  margin-left: 40%;
 }
-#menu a{
+#menu a {
+  text-decoration: none;
+}
+#formU {
+  border: 1px solid darkblue;
+  border-radius: 30px;
+  padding: 20px;
+  width: fit-content;
+  position: relative;
+  justify-items: center;
+  top: 200px;
+  margin-left: 30%;
+}
+a{
     text-decoration: none;
-}
-#formU{
-    width: fit-content;
-    position: relative;
-    justify-items: center;
-    top: 200px;
-    margin-left: 30%;
 }
